# bigbang

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindALGLIB.cmake  FindArpack.cmake  FindLBFGS.cmake  FindUMFPACK.cmake  FindViennaCL.cmake  geo_sim_sdk.cmake
dat/: beam.hex.vtk  beam.tet  beam.vol  beam_dense.tet  beam_dense_fixed.fv  beam_dense_handle.fv  beam_fixed.fv  beam_hex.binvox  beam_hex_fixed.fv  bunny.hex.vtk  cube.stl  cube.tet  cube.vol  cylinder.tet  cylinder.vol  cylinder_fixed.fv  plane_fixed_2.fv
examples/: CMakeLists.txt  bin_reader.cc  binvox2hex.cc  binvox_parser.cc  embedded_fem.cc  lbfgs_demo.cc  main_catenary_dyn.cc  main_example_elastic.cc  mass_spring.cc  obj2vtk.cc  read_obj.cc  rod.json  simple_elastic_solver.cc  stitch_sim.json  test_alglib.cc  test_cloth.cc  test_cosserat.cc  test_emb_thin_shell.cc  test_fast_proj.cc  test_frm_strain_rate.cc  test_hybrid_stitch.cc  test_modal_basis.cc  test_pbd_cloth.cc  test_proj_dyn.cc  test_proj_dyn_tet.cc  test_quasi_static.cc  test_unit.cc  test_upsampling.cc  test_wrinkle_sim.cc  vol2tet.cc  vtk2obj.cc  wrinkle_sim_plane.json  wrinkle_sim_plane_re.json
script/: d_x.wxm  helix_frenet.wxm  le.wxm  reverse_quaternion.wxm  run-catenary.sh  run_cloth.sh  run_fast_proj.sh  run_modal_analyse.sh  run_proj_dyn.sh  run_proj_dyn_tet.sh  run_simple_elastic.sh  run_upsampling.sh  spring_direct.wxm  two_way_for_df.wxm
src/: CMakeLists.txt  arpaca.h  catenary.cc  catenary.h  cj_function.mac  constraint.cc  constraint.h  constraint_graph.cc  constraint_graph.h  cosserat.cc  cosserat.h  cosserat_rod.mac  def.h  elasticity.mac  energy.cc  energy.h  example_elastic.cc  example_elastic.h  f90hj.lisp  fast_proj.cc  fast_proj.h  geom_util.cc  geom_util.h  green_strain.c  green_strain.mac  green_strain_jac_curr.c  green_strain_jac_rest.c  hj_flatten.mac  hj_fortran.mac  hj_fortran2.mac  inhomogeneous_elastic.cc  inhomogeneous_elastic.h  io.cc  io.h  jacobi.cu  jacobi.h  jacobi_kernel.cu  jsoncpp.cpp  mass_matrix.cc  mass_matrix.h  (+22 more)
src/HLBFGS/: CMakeLists.txt
